// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SourceList can remove search 1`] = `
<Column>
  <SourceList
    calculatedHeight={400}
    disabled={false}
    filteredItems={Array []}
    isAllSelected={false}
    itemHeight={40}
    itemRenderer={[Function]}
    listRenderer={[Function]}
    messages={Object {}}
    noItemsRenderer={[Function]}
    selectAllRenderer={[Function]}
    selectedIds={Array []}
    showSearch={true}
    showSelectAll={true}
    withGrouping={false}
  />
</Column>
`;

exports[`SourceList can remove select all 1`] = `
<Column>
  <SourceList
    calculatedHeight={400}
    disabled={false}
    filteredItems={Array []}
    isAllSelected={false}
    itemHeight={40}
    itemRenderer={[Function]}
    listRenderer={[Function]}
    messages={Object {}}
    noItemsRenderer={[Function]}
    selectAllRenderer={[Function]}
    selectedIds={Array []}
    showSearch={true}
    showSelectAll={false}
    withGrouping={false}
  />
</Column>
`;

exports[`SourceList custom itemRenderer 1`] = `
<Column>
  <SourceList
    calculatedHeight={400}
    disabled={false}
    filteredItems={Array []}
    isAllSelected={false}
    itemHeight={40}
    itemRenderer={[MockFunction mockedComponent]}
    listRenderer={[Function]}
    messages={Object {}}
    noItemsRenderer={[Function]}
    selectAllRenderer={[Function]}
    selectedIds={Array []}
    showSearch={true}
    showSelectAll={true}
    withGrouping={false}
  />
</Column>
`;

exports[`SourceList custom messages 1`] = `
<Column>
  <SourceList
    calculatedHeight={400}
    disabled={false}
    filteredItems={Array []}
    isAllSelected={false}
    itemHeight={40}
    itemRenderer={[Function]}
    listRenderer={[Function]}
    messages={Object {}}
    noItemsRenderer={[Function]}
    selectAllRenderer={[Function]}
    selectedIds={Array []}
    showSearch={true}
    showSelectAll={true}
    withGrouping={false}
  />
</Column>
`;

exports[`SourceList custom noItemsRenderer 1`] = `
<Column>
  <SourceList
    calculatedHeight={400}
    disabled={false}
    filteredItems={Array []}
    isAllSelected={false}
    itemHeight={40}
    itemRenderer={[Function]}
    listRenderer={[Function]}
    messages={Object {}}
    noItemsRenderer={[MockFunction mockedComponent]}
    selectAllRenderer={[Function]}
    selectedIds={Array []}
    showSearch={true}
    showSelectAll={true}
    withGrouping={false}
  />
</Column>
`;

exports[`SourceList custom searchRenderer 1`] = `
<Column>
  <SourceList
    calculatedHeight={400}
    disabled={false}
    filteredItems={Array []}
    isAllSelected={false}
    itemHeight={40}
    itemRenderer={[Function]}
    listRenderer={[Function]}
    messages={Object {}}
    noItemsRenderer={[Function]}
    selectAllRenderer={[Function]}
    selectedIds={Array []}
    showSearch={true}
    showSelectAll={true}
    withGrouping={false}
  />
</Column>
`;

exports[`SourceList custom selectAllRenderer 1`] = `
<Column>
  <SourceList
    calculatedHeight={400}
    disabled={false}
    filteredItems={Array []}
    isAllSelected={false}
    itemHeight={40}
    itemRenderer={[Function]}
    listRenderer={[Function]}
    messages={Object {}}
    noItemsRenderer={[Function]}
    selectAllRenderer={[MockFunction mockedComponent]}
    selectedIds={Array []}
    showSearch={true}
    showSelectAll={true}
    withGrouping={false}
  />
</Column>
`;

exports[`SourceList default snapshot 1`] = `
<Column>
  <SourceList
    calculatedHeight={400}
    disabled={false}
    filteredItems={Array []}
    isAllSelected={false}
    itemHeight={40}
    itemRenderer={[Function]}
    listRenderer={[Function]}
    messages={Object {}}
    noItemsRenderer={[Function]}
    selectAllRenderer={[Function]}
    selectedIds={Array []}
    showSearch={true}
    showSelectAll={true}
    withGrouping={false}
  />
</Column>
`;

exports[`SourceList passed filterItems 1`] = `
<Column>
  <SourceList
    calculatedHeight={400}
    disabled={false}
    filteredItems={Array []}
    isAllSelected={false}
    itemHeight={40}
    itemRenderer={[Function]}
    listRenderer={[Function]}
    messages={Object {}}
    noItemsRenderer={[Function]}
    selectAllItems={[MockFunction filterItems]}
    selectAllRenderer={[Function]}
    selectedIds={Array []}
    showSearch={true}
    showSelectAll={true}
    withGrouping={false}
  />
</Column>
`;

exports[`SourceList passed filteredItems with group 1`] = `
<Column>
  <SourceList
    calculatedHeight={400}
    disabled={false}
    filteredItems={
      Array [
        Object {
          "group": "group1",
          "id": 1,
          "label": "item1",
        },
        Object {
          "group": "group2",
          "id": 2,
          "label": "item2",
        },
        Object {
          "group": "group1",
          "id": 3,
          "label": "item3",
        },
      ]
    }
    isAllSelected={false}
    itemHeight={40}
    itemRenderer={[Function]}
    listRenderer={[Function]}
    messages={Object {}}
    noItemsRenderer={[Function]}
    selectAllRenderer={[Function]}
    selectedIds={Array []}
    showSearch={true}
    showSelectAll={true}
    withGrouping={true}
  />
</Column>
`;

exports[`SourceList passed selectAllItems 1`] = `
<Column>
  <SourceList
    calculatedHeight={400}
    disabled={false}
    filteredItems={Array []}
    isAllSelected={false}
    itemHeight={40}
    itemRenderer={[Function]}
    listRenderer={[Function]}
    messages={Object {}}
    noItemsRenderer={[Function]}
    selectAllItems={[MockFunction selectAllItems]}
    selectAllRenderer={[Function]}
    selectedIds={Array []}
    showSearch={true}
    showSelectAll={true}
    withGrouping={false}
  />
</Column>
`;

exports[`SourceList passed selectItem 1`] = `
<Column>
  <SourceList
    calculatedHeight={400}
    disabled={false}
    filteredItems={Array []}
    isAllSelected={false}
    itemHeight={40}
    itemRenderer={[Function]}
    listRenderer={[Function]}
    messages={Object {}}
    noItemsRenderer={[Function]}
    selectAllItems={[MockFunction selectItem]}
    selectAllRenderer={[Function]}
    selectedIds={Array []}
    showSearch={true}
    showSelectAll={true}
    withGrouping={false}
  />
</Column>
`;

exports[`SourceList passed selectedIds 1`] = `
<Column>
  <SourceList
    calculatedHeight={400}
    disabled={false}
    filteredItems={Array []}
    isAllSelected={false}
    itemHeight={40}
    itemRenderer={[Function]}
    listRenderer={[Function]}
    messages={Object {}}
    noItemsRenderer={[Function]}
    selectAllRenderer={[Function]}
    selectedIds={
      Array [
        1,
        2,
      ]
    }
    showSearch={true}
    showSelectAll={true}
    withGrouping={false}
  />
</Column>
`;

exports[`SourceList passed selectedItems 1`] = `
<Column>
  <SourceList
    calculatedHeight={400}
    disabled={false}
    filteredItems={Array []}
    isAllSelected={false}
    itemHeight={40}
    itemRenderer={[Function]}
    listRenderer={[Function]}
    messages={Object {}}
    noItemsRenderer={[Function]}
    selectAllRenderer={[Function]}
    selectedIds={Array []}
    selectedItems={
      Array [
        1,
        2,
      ]
    }
    showSearch={true}
    showSelectAll={true}
    withGrouping={false}
  />
</Column>
`;

exports[`SourceList show max selection tooltip 1`] = `
<Column>
  <SourceList
    calculatedHeight={400}
    disabled={false}
    filteredItems={Array []}
    isAllSelected={false}
    itemHeight={40}
    itemRenderer={[Function]}
    listRenderer={[Function]}
    messages={Object {}}
    noItemsRenderer={[Function]}
    selectAllRenderer={[Function]}
    selectedIds={Array []}
    showSearch={true}
    showSelectAll={true}
    withGrouping={false}
  />
</Column>
`;

exports[`SourceList will pass itemHeight 1`] = `
<Column>
  <SourceList
    calculatedHeight={400}
    disabled={false}
    filteredItems={Array []}
    isAllSelected={false}
    itemHeight={10}
    itemRenderer={[Function]}
    listRenderer={[Function]}
    messages={Object {}}
    noItemsRenderer={[Function]}
    selectAllRenderer={[Function]}
    selectedIds={Array []}
    showSearch={true}
    showSelectAll={true}
    withGrouping={false}
  />
</Column>
`;

exports[`SourceList will pass selectAllHeight 1`] = `
<Column>
  <SourceList
    calculatedHeight={400}
    disabled={false}
    filteredItems={Array []}
    isAllSelected={false}
    itemHeight={10}
    itemRenderer={[Function]}
    listRenderer={[Function]}
    messages={Object {}}
    noItemsRenderer={[Function]}
    selectAllHeight={60}
    selectAllRenderer={[Function]}
    selectedIds={Array []}
    showSearch={true}
    showSelectAll={true}
    withGrouping={false}
  />
</Column>
`;

exports[`SourceList will pass selectAllHeight without itemHeight 1`] = `
<Column>
  <SourceList
    calculatedHeight={400}
    disabled={false}
    filteredItems={Array []}
    isAllSelected={false}
    itemHeight={40}
    itemRenderer={[Function]}
    listRenderer={[Function]}
    messages={Object {}}
    noItemsRenderer={[Function]}
    selectAllHeight={60}
    selectAllRenderer={[Function]}
    selectedIds={Array []}
    showSearch={true}
    showSelectAll={true}
    withGrouping={false}
  />
</Column>
`;
